--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -82,3 +82,7 @@ table {
 .dashboard-main .offset-md-1 {
   margin-left: 2.333333%;
 }
+
+.table th, .table td button:nth-child(1) {
+  margin-right: 10px;
+}
