--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,13 +27,17 @@
     font-weight: 600;
   }
   
+.main{
+  position: relative;
+}
+
   .footer-sec{
     background-color: #ccc;
     padding: 1rem 0;
     margin-top: 4rem;
-  }
+}
 
- .navbar-expand-lg .navbar-nav {
+.navbar-expand-lg .navbar-nav {
     flex-direction: row;
     align-items: center;
     margin: 0 auto;
@@ -94,4 +98,54 @@ table {
   height: 100vh;
 }
 
- 
+thead, tbody, tfoot, tr, td img {
+  object-fit: cover;
+}
+
+.customer-footer-sec {
+  position: absolute;
+  bottom: 0;
+  padding: 40px 0;
+  width: 100%;
+  background-color: #f8f9fa;
+}
+
+.input-wrapper .d-flex input.form-control {
+  margin: 0 7px;
+}
+
+
+.input-wrapper {
+  padding: 45px 0;
+}
+
+
+.input-wrapper{
+  background: url("https://avatars.mds.yandex.net/i?id=2f5ab984f6b5584e94a4d4a8709e34299f298af5-4697086-images-thumbs&n=13") no-repeat;
+  padding: 90px 0;
+  background-position: center;
+  background-size: cover;
+  position: relative;
+ }
+
+.overlay{
+  position: absolute;
+  left: 0px;
+  right:0px;
+  width: 100%;
+  height: 100%;
+  top:0px;
+  bottom:0px;
+  background-color: rgba(0, 0, 0, 0.4); 
+ }
+.input-wrapper .container {
+  position: relative;
+  z-index: 999;
+}
+
+h1.color-white {
+  color: #fff;
+  margin-bottom: 25px;
+  text-transform: capitalize;
+
+}
