--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -111,10 +111,14 @@ thead, tbody, tfoot, tr, td img {
 }
 
 .input-wrapper .d-flex input.form-control {
-  margin: 0 7px;
+  margin:0px;
+  height: 60px;
+  border-radius: 0px;
 }
 
-
+.input-wrapper .d-flex input:nth-child(1) {
+  width:310px;
+}
 .input-wrapper {
   padding: 45px 0;
 }
@@ -138,6 +142,8 @@ thead, tbody, tfoot, tr, td img {
   bottom:0px;
   background-color: rgba(0, 0, 0, 0.4); 
  }
+
+ 
 .input-wrapper .container {
   position: relative;
   z-index: 999;
@@ -147,5 +153,10 @@ h1.color-white {
   color: #fff;
   margin-bottom: 25px;
   text-transform: capitalize;
+}
 
+.navbar-nav ul.p-0 li a {
+  font-size: 20px;
+  font-weight: 600;
+  color: #000;
 }
