--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -68,8 +68,7 @@ table {
 }
 
 .table thead {
-  background-color: #4CAF50;
-  color: white;
+   color: white;
 }
 
 .table th, .table td {
@@ -161,4 +160,16 @@ h1.color-white {
   font-size: 20px;
   font-weight: 600;
   color: #000;
+}
+
+ 
+.detail-listing ul li {
+    display: inline-block;
+    background-color: #ccc;
+    margin: 10px 10px;
+}
+
+.detail-listing ul li h3 {
+    margin-bottom: 0;
+    padding: 10px;
 }
